# AutoSiqual

./: .gitignore  AutoSiqual.py  ExcelParserAbstract.py  ExcelParser_CAT.py  ImportarDatos.py  Makefile  PasteData.py  PegarDatos.py  README.md  about.py  about.ui  config.json  config.py  gui.py  gui.ui  log.py  log.ui  main.py  main.spec  pyproject.toml  requirements.txt
.github/workflows/: test_workflow.yml
excel_parser/: CAT.py  ExcelParserAbstract.py  ParserFactory.py
gui/: about.py  about.ui  log.py  log.ui  main.py  main.ui
src/: __init__.py  autosiqual.py  config.py  exceptions.py  main.py  paste_data.py  utils.py
src/excel_parser/: CAT.py  ExcelParserAbstract.py  ParserFactory.py
src/models/: user_config.py
src/parsers/: excel_parsers.py  utils.py
tests/: conftest.py  test_image_identification.py  test_parser_utils.py  test_parsers.py
tests/data/: dates.xlsx
tests/data/cat/: products.xlsx  raw_materials.xlsx  sample_config.json
