[tool.poetry]
name = "AutoSiqual"
version = "2.3.0"
description = "A standalone application to automate data input into the Siqual software."
authors = ["Mariano <macebal@outlook.com.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
openpyxl = "^3.1.2"
PyAutoGUI = "^0.9.54"
opencv-python = "^4.8.1.78"
PyQt5 = "^5.15.9"
pyqt5-tools = "^5.15.9.3.3"
pyclip = "^0.7.0"
pyinstaller = "5.13.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
