[tool.poetry]
name = "AutoSiqual"
version = "2.4.7"
description = "A standalone application to automate data input into the Siqual software."
authors = ["Mariano <macebal@outlook.com.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
openpyxl = "^3.1.2"
PyAutoGUI = "^0.9.54"
opencv-python = "^4.8.1.78"
PyQt5 = "^5.15.9"
pyqt5-tools = "^5.15.9.3.3"
pyinstaller = "5.13.2"
pydantic = "^2.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-split = "^0.8.1"
pytest-xdist = "^3.4.0"
types-openpyxl = "^3.1.0.27"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-vvv --disable-warnings --store-durations --cov=src --numprocesses=4 --cov-report term-missing --no-cov-on-fail --max-worker-restart=1"
testpaths = [
    "tests",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(message)s"

[tool.coverage.run]
branch = true
source = ["src", "tests"]
omit = ["*__init__*", "*__pycache__*", ".pytest_cache/*", "*.egg-info/*", ".vscode/*", ".test_durations", "docs/*", "build/*", "dist/*", "scripts/*", "tests/*", "*.json", "*.circleci/*", "*.github/*", "*.test_durations", "*.gitignore", "*.gitattributes", "setup.py", "setup.cfg", "requirements.txt", "requirements-dev.txt", "README.rst", "README.md", "Makefile", "Dockerfile", "docker-compose.yml", "test-results/**", "poetry.lock", "pyproject.toml", ".gitignore", ".dockerignore", "*test_*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "def __str__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:"
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "gui", #mostly auto generated files
]

# Same as Black.
line-length = 110
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
lines-between-types = 0
no-sections = true